Fixed borders not overlapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -390,3 +390,9 @@ input[type=submit] {
   background-color: white;
   border: solid 1px #d4d4d4;
 }
+
+.new_user {
+  .form_field {
+    margin: -1px;
+  }
+}
